OPEN - task 11: Mecanismo de Montagem do registro 75 https://github.com/canalvpsasul/sintegra/issues/issue/11