@@ -8,7 +8,6 @@ import org.springframework.stereotype.Service;
 
 import br.com.canalvpsasul.sintegra.entities.DadosPorTipoNota;
 import br.com.canalvpsasul.sintegra.entities.TipoItemRegistro54;
-import br.com.canalvpsasul.sintegra.helper.ConversionUtils;
 import br.com.canalvpsasul.vpsabusiness.entities.fiscal.ItemNota;
 import br.com.canalvpsasul.vpsabusiness.entities.fiscal.NotaMercadoria;
 import coffeepot.br.sintegra.registros.Registro54;
@@ -26,12 +25,13 @@ public class Registro54BusinessImpl implements Registro54Business {
 		
 		ArrayList<Registro54> registros = new ArrayList<Registro54>();
 
-		Float freteTotal = Float.valueOf(0);
-		Float seguroTotal = Float.valueOf(0);
-		Float outrasTotal = Float.valueOf(0);
-		Float pisTotal = Float.valueOf(0);
-		Float cofinsTotal = Float.valueOf(0);
-		Long cfop = Long.valueOf(0);
+		Float freteTotal = new Float(0);
+		Float seguroTotal = new Float(0);
+		Float outrasTotal = new Float(0);
+		Float pisTotal = new Float(0);
+		Float cofinsTotal = new Float(0);
+		Float maiorValorItem = new Float(0);
+		Long cfop = new Long(0);
 		String cst = "";
 		
 		int count = 1;
@@ -43,19 +43,19 @@ public class Registro54BusinessImpl implements Registro54Business {
 			registro54.setModeloDocumento(dadosPorTipoNota.getModeloDocumentoFiscal());
 			registro54.setSerieDocumento(dadosPorTipoNota.getSerie());
 
-			registro54.setAliquotaIcms(ConversionUtils.fromFloat(item.getIcms().getAliquota()));
-			registro54.setBasedeCalculoIcms(ConversionUtils.fromFloat(item.getIcms().getBase()));
-			registro54.setBaseDeCalculoIcmsST(ConversionUtils.fromFloat(item.getIcmsst().getBase()));
+			registro54.setAliquotaIcms(new Double(item.getIcms().getAliquota()));
+			registro54.setBasedeCalculoIcms(new Double(item.getIcms().getBase()));
+			registro54.setBaseDeCalculoIcmsST(new Double(item.getIcmsst().getBase()));
 			registro54.setCfop(Integer.parseInt(String.valueOf(item.getCfop())));
 			registro54.setCodigoProduto(item.getProduto().getVpsaId().toString());			 
 			registro54.setCst(item.getProduto().getOrigem() + item.getIcms().getCst());			
-			registro54.setQuantidade(ConversionUtils.fromFloat(item.getQuantidade()));
-			registro54.setValorBrutoItem(ConversionUtils.fromFloat(item.getQuantidade() * item.getValorUnitario()));			
+			registro54.setQuantidade(new Double(item.getQuantidade()));
+			registro54.setValorBrutoItem(new Double(item.getQuantidade() * item.getValorUnitario()));			
 			registro54.setNumeroDocumento(Integer.parseInt(String.valueOf(nota.getNumero())));
 			registro54.setNumeroItem(count++);
 			registro54.setValorDesconto(new Double(item.getValorDesconto()));
 			if (item.getIpi() != null)
-				registro54.setValorIpi(ConversionUtils.fromFloat(item.getIpi()
+				registro54.setValorIpi(new Double(item.getIpi()
 						.getValor()));
 
 			registros.add(registro54);
@@ -70,9 +70,16 @@ public class Registro54BusinessImpl implements Registro54Business {
 			if(item.getCofins().getValor() > 0)
 				cofinsTotal += item.getCofins().getValor();
 			
-			//TODO SINTEGRA Registro 54 - Considerar a CFOP e a CST do item com maior valor.			
-			cfop = item.getCfop();
-			cst = item.getIcms().getCst();
+			/*
+			 * Consideramos o CFOP e CST do item com maior valor para os registros 54 referentes a frete, seguro, outras despesas e pis cofins
+			 * */
+			if(maiorValorItem < item.getValorTotal()) {
+				
+				cfop = item.getCfop();
+				cst = item.getIcms().getCst();
+				
+				maiorValorItem = item.getValorTotal();
+			}
 		}
 		
 		if(freteTotal > 0)
@@ -99,7 +106,7 @@ public class Registro54BusinessImpl implements Registro54Business {
 		registro54.setCst(cst);
 		
 		registro54.setNumeroItem(Integer.valueOf(tipo.getCode()));
-		registro54.setValorDesconto(ConversionUtils.fromFloat(valorItem));
+		registro54.setValorDesconto(new Double(valorItem));
 		
 		registro54.setCodigoProduto("");
 		registro54.setValorBrutoItem(Double.valueOf(0));
